2010-11-28 John Wu <John dot Wu at ACM dot org>
	* examples/tcapi.c: change buildin to builtin, add a repeat of the
	built-in tests to mimic the test case from Chavdar Kopeov

2010-11-26 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp:3829 change the test condition to avoid
	division by 0 (when density is 1)
	* src/parti.cpp: in function part::updateData check both st_ctime
	and st_mtime (my own windows-based laptop seems to not update
	st_ctime, but st_mtime), reading the metadata files if time stamps
	are the same as previously recorded to allow for quick changes
	within the same second

2010-11-25 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp: in function ibis::tafel::write and
	ibis::tafel::writeMetaData move the statement to flush the data
	directory to the beginning of the respective function

2010-11-24 John Wu <John dot Wu at ACM dot org>
	* src/part.h, src/part.cpp, src/parti.cpp: add part::updateData
	and util::updateDatasets at the request of Chavdar Kopeov

2010-11-23 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp, src/bitvector.cpp: change the operation to read
	bitvectors to prefer read (instead of file map) to address a
	problem observed by Chavdar Kopoev

2010-11-14 John Wu <John dot Wu at ACM dot org>
	* src/filter.cpp, src/mensa.cpp: add printing statements to help
	debug problems with exceptions absorbed by table::select and
	filter::select (in an attempt to address an issue raised by
	Anderson Chavez)

2010-11-04 John Wu <John dot Wu at ACM dot org>
	* src/bord.h: add quotes to string values printed from
	ibis::bord::column (as suggested by Anderson Chaves)
	* tests/Makefile.am: update check-ibis test 2 and check-text test
	4 to accommodate the changes in printout

2010-11-03 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.cpp:1694 the statement "if (n < 8) n = 8" causes
	some allocations of 4-byte arrays to fail consistency checks
	* tests/Makefile.am: change rule for $(TESTDIR) to TESTDIR and